trocando as cores2

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,4 +1,4 @@
 [theme]
 primaryColor="#F63366"
-# backgroundColor="FFFFFF"
-secondaryBackgroundColor="#FFCC99"
+backgroundColor="#333333"
+secondaryBackgroundColor="#FF6600"
