adicionando funções, comandos, listas, imagens eos livros a todos os arquivos

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,4 +1,4 @@
 [theme]
 primaryColor="#F63366"
-backgroundColor="#FFCC00"
-secondaryBackgroundColor="#FF6600"
+backgroundColor="#FFCC99"
+secondaryBackgroundColor="#E9C2A6"
